Corrected table flex alignment after merging repositories.

--- a/form_builder/static/sass/_animation.scss
+++ b/form_builder/static/sass/_animation.scss
@@ -1,3 +1,16 @@
+.fadeIn {
+  animation: fadeIn 1.5s ease-in-out forwards;
+}
+
+@keyframes fadeIn {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
 @keyframes scale-image {
 	0% {
 		transform: scale(1.1);
