--- a/form_builder/static/sass/_table.scss
+++ b/form_builder/static/sass/_table.scss
@@ -1,5 +1,6 @@
 /* form styles */
 #table {	
+  align-self: flex-start;
 	border-collapse: collapse;
 	margin: 15rem 0;
 	width: 95%;
